--- a/content/publication/conitzer-2019-pacing/cite.bib
+++ b/content/publication/conitzer-2019-pacing/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{conitzer2019pacing,
- author = {Christian Kroer and Debmalya Panigrahi and Okke Schrijvers and Eric Sodomka and Nicolas E Stier-Moses and Chris Wilkens},
+ author = {Vincent Conitzer and Christian Kroer and Debmalya Panigrahi and Okke Schrijvers and Eric Sodomka and Nicolas E Stier-Moses and Chris Wilkens},
  booktitle = {EC},
  title = {Pacing Equilibrium in First-Price Auction Markets},
  url = {https://arxiv.org/abs/1811.07166},
