--- a/content/publication/farina-2019-regret/cite.bib
+++ b/content/publication/farina-2019-regret/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{farina2019regret,
- author = {Gabriele Farina and Christian Kroer and Noam Brown and Tuomas Sandholm},
- booktitle = {ICML},
+ author = {Gabriele Farina and Christian Kroer and Tuomas Sandholm},
+ booktitle = {ICML (long oral)},
  title = {Regret Circuits: Composability of Regret Minimizers },
  url = {https://arxiv.org/abs/1811.02540},
  year = {2019}
